replacing indexed for loop with IntStream